borsh-schema-derive-internal/src/snapshots/borsh_schema_derive_internal__struct_schema__tests__tuple_struct_whole_skip.snap
---
source: borsh-schema-derive-internal/src/struct_schema.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl borsh::BorshSchema for A {
    fn declaration() -> borsh::schema::Declaration {
        "A".to_string()
    }
    fn add_definitions_recursively(
        definitions: &mut borsh::__private::maybestd::collections::BTreeMap<
            borsh::schema::Declaration,
            borsh::schema::Definition,
        >,
    ) {
        let fields = borsh::schema::Fields::Empty;
        let definition = borsh::schema::Definition::Struct {
            fields,
        };
        Self::add_definition(Self::declaration(), definition, definitions);
    }
}

